Update 프로그래밍 전용 리포트 개발(12.23).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
@@ -154,15 +154,16 @@ SELECTION-SCREEN END OF LINE.
 </br>
 
 ### 4) AT SELECTION-SCREEN ON <field>
-- 특정 입력 필드 하나에 대해서만 사용자가 값을 입력하고 실행했을 때 실행되는 이벤트
-- Selection Screen의 PAI 단계(입력 처리)
+
+- Selection Screen 전체 Enter / 실행 시 호출
+- 전체 입력값 공통 체크
 ```abap
-AT SELECTION-SCREEN ON <field>.
-  IF <field> = 'X'.
-    CALL SELECTION-SCREEN <screen_no>
-      STARTING AT <x1> <y1>
-      ENDING   AT <x2> <y2>.
-  ENDIF.
+`AT SELECTION-SCREEN`
+```
+- 특정 입력 필드 하나만 검사
+- 그 필드 값이 바뀌거나 Enter 시 실행
+```abap
+AT SELECTION-SCREEN ON <field>
 ```
 ```abap
 SELECTION-SCREEN BEGIN OF SCREEN 1100.
@@ -180,6 +181,31 @@ AT SELECTION-SCREEN ON pa_add.
     IF sy-subrc <> 0.
       LEAVE TO SCREEN 1000.
     ENDIF.
+  ENDIF.
+```
+- SELECT-OPTIONS 전체 라인(low/high) 검사
+```abap
+AT SELECTION-SCREEN ON <select-options>
+```
+- 라디오버튼 그룹 중 선택 상태 검사
+```abap
+AT SELECTION-SCREEN ON RADIOBUTTON GROUP <grp>
+```
+- 블록 안의 입력값 전체를 한 번에 검사
+```abap
+AT SELECTION-SCREEN ON BLOCK <block>
+```
+```abap
+SELECT-OPTIONS so_dept FOR zdept-deptno.
+PARAMETERS city_fr TYPE string.
+
+AT SELECTION-SCREEN ON so_dept.
+
+  IF ( so_dept-low  LT '060000' AND so_dept-high LT '060000' )
+   OR ( so_dept-low  GE '220000' AND so_dept-high GE '220000' )
+   AND city_fr = 'FRANKFURT'.
+
+    MESSAGE e046(bc405).  " 에러 → 화면에 머무름
   ENDIF.
 ```
 </br>
