Update 프로그래밍 전용 리포트 개발(12.23).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
@@ -201,23 +201,23 @@ AT SELECTION-SCREEN ON BLOCK <block>
 ### 5) Selection Screen 서브스크린 & 탭스트립
 - 서브스크린 코드 형식
 ```abap
-SELECTION-SCREEN BEGIN OF SCREEN <서브스크린번호> AS SUBSCREEN.
-  PARAMETERS / SELECT-OPTIONS <입력필드>.
-SELECTION-SCREEN END OF SCREEN <서브스크린번호>.
+SELECTION-SCREEN BEGIN OF SCREEN <subscreen_number> AS SUBSCREEN.
+  PARAMETERS / SELECT-OPTIONS <input_field>.
+SELECTION-SCREEN END OF SCREEN <subscreen_number>.
 ```
 - 탭스트립 코드 형식
 ```abap
-SELECTION-SCREEN BEGIN OF TABBED BLOCK <탭블록명> FOR <라인수> LINES.
+SELECTION-SCREEN BEGIN OF TABBED BLOCK <tab_block_name> FOR <number_of_lines> LINES.
 
-  SELECTION-SCREEN TAB (<탭_텍스트_최대길이>) <탭텍스트변수>
-    USER-COMMAND <OKCODE> DEFAULT SCREEN <서브스크린번호>.
+  SELECTION-SCREEN TAB (<max_tab_text_length>) <tab_text_variable>
+    USER-COMMAND <ok_code> DEFAULT SCREEN <subscreen_number>.
 
-SELECTION-SCREEN END OF BLOCK <탭블록명>.
+SELECTION-SCREEN END OF BLOCK <tab_block_name>.
 ```
 - 탭스트립 초기 활성 탭 / 서브스크린 지정
 ```abap
-<탭블록명>-activetab = '<USER-COMMAND>'.
-<탭블록명>-dynnr     = '<서브스크린번호>'.
+<tab_block_name>-activetab = '<ok_code>'.
+<tab_block_name>-dynnr     = '<subscreen_number>'.
 ```
 ```abap
 "----------------------------------------
