--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
@@ -197,6 +197,17 @@ AT SELECTION-SCREEN ON RADIOBUTTON GROUP <grp>
 ```abap
 AT SELECTION-SCREEN ON BLOCK <block>
 ```
+- Selection Screen에서 특정 필드에서 F1(Help) 를 눌렀을 때 실행되는 이벤트
+```abap
+AT SELECTION-SCREEN ON HELP-REQUEST FOR <field>
+```
+```abap
+PARAMETERS pa_carr TYPE sflight-carrid.
+
+AT SELECTION-SCREEN ON HELP-REQUEST FOR pa_carr.
+  CALL SCREEN 100
+    STARTING AT 5 5.
+```
 </br>
 </br>
 
