Update 프로그래밍 전용 리포트 개발(12.23).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
@@ -656,3 +656,40 @@ START-OF-SELECTION.
 </br>
 
 - Program 코드에 `TOP` , `E01` 모듈 생성
+```abap
+REPORT ZBC400_B03_PRACTICE4.
+
+INCLUDE ZBC400_B03_PRACTICE4_TOP.
+INCLUDE ZBC400_B03_PRACTICE4_E01.
+```
+- `TOP` 모듈 수정
+```abap
+DATA: gs_flight TYPE dv_flights,
+      gt_flight TYPE TABLE OF dv_flights.
+
+SELECTION-SCREEN BEGIN OF SCREEN 1100 AS SUBSCREEN.
+  SELECT-OPTIONS: so_car FOR gs_flight-carrid MEMORY ID car,
+                  so_con FOR gs_flight-connid.
+SELECTION-SCREEN END OF SCREEN 1100.
+
+SELECTION-SCREEN BEGIN OF SCREEN 1200 AS SUBSCREEN.
+  SELECT-OPTIONS: so_dat FOR gs_flight-fldate NO-EXTENSION.
+SELECTION-SCREEN END OF SCREEN 1200.
+
+SELECTION-SCREEN BEGIN OF SCREEN 1300 AS SUBSCREEN.
+  PARAMETERS: pa_all RADIOBUTTON GROUP rad,
+              pa_nat RADIOBUTTON GROUP rad,
+              pa_int RADIOBUTTON GROUP rad DEFAULT 'X'.
+SELECTION-SCREEN END OF SCREEN 1300.
+
+SELECTION-SCREEN BEGIN OF TABBED BLOCK tab_strip FOR 5 LINES.
+  SELECTION-SCREEN TAB (20) TEXT-TA1 USER-COMMAND comm1 DEFAULT SCREEN 1100.
+  SELECTION-SCREEN TAB (20) TEXT-TA2 USER-COMMAND comm2 DEFAULT SCREEN 1200.
+  SELECTION-SCREEN TAB (20) TEXT-TA3 USER-COMMAND comm3 DEFAULT SCREEN 1300.
+SELECTION-SCREEN END OF BLOCK tab_strip.
+```
+- `E01` 모듈 수정
+```abap
+tab_strip-activetab = 'comm2'.
+tab_strip-dynnr = '1200'.
+```
