Update 프로그래밍 전용 리포트 개발(12.23).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
@@ -693,3 +693,9 @@ SELECTION-SCREEN END OF BLOCK tab_strip.
 tab_strip-activetab = 'comm2'.
 tab_strip-dynnr = '1200'.
 ```
+- 결과 확인
+  
+<img width="550" height="148" alt="image" src="https://github.com/user-attachments/assets/9f69be33-2db6-4d5f-b09a-e3fec3bb8ca4" />
+</br>
+
+<img width="540" height="206" alt="image" src="https://github.com/user-attachments/assets/c56cb335-aa82-413e-a355-33e8dd5c5a07" />
