Update 프로그래밍 전용 리포트 개발(12.23).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
@@ -706,3 +706,13 @@ tab_strip-dynnr = '1200'.
 </br>
 
 <img width="540" height="206" alt="image" src="https://github.com/user-attachments/assets/c56cb335-aa82-413e-a355-33e8dd5c5a07" />
+</br>
+</br>
+</br>
+</br>
+
+### 실습 4
+- Message Class, Variant 예제
+- 실습 3 에서 이어서 진행
+
+- Program 코드에 `TOP` , `E01` 모듈 생성
