Update 프로그래밍 전용 리포트 개발(12.23).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
@@ -662,13 +662,6 @@ START-OF-SELECTION.
 - 실습 2 에서 이어서 진행
 </br>
 
-- Program 코드에 `TOP` , `E01` 모듈 생성
-```abap
-REPORT ZBC400_B03_PRACTICE4.
-
-INCLUDE ZBC400_B03_PRACTICE4_TOP.
-INCLUDE ZBC400_B03_PRACTICE4_E01.
-```
 - `TOP` 모듈 수정
 ```abap
 DATA: gs_flight TYPE dv_flights,
@@ -714,5 +707,49 @@ tab_strip-dynnr = '1200'.
 ### 실습 4
 - Message Class, Variant 예제
 - 실습 3 에서 이어서 진행
+</br>
 
-- Program 코드에 `TOP` , `E01` 모듈 생성
+- `TOP` 모듈 수정
+```abap
+SELECTION-SCREEN BEGIN OF SCREEN 1300 AS SUBSCREEN.
+  SELECTION-SCREEN BEGIN OF BLOCK blk.
+    PARAMETERS: pa_all RADIOBUTTON GROUP rad,
+                pa_nat RADIOBUTTON GROUP rad,
+                pa_int RADIOBUTTON GROUP rad DEFAULT 'X'.
+    PARAMETERS: pa_con LIKE gs_flight-countryfr.      " countryfr 파라미터 추가
+  SELECTION-SCREEN END OF BLOCK blk.
+SELECTION-SCREEN END OF SCREEN 1300.
+```
+- `E01` 모듈 수정
+```abap
+AT SELECTION-SCREEN ON BLOCK blk.
+  IF pa_nat = 'X' AND pa_con IS INITIAL.
+    MESSAGE e003(bc405).
+  ENDIF.
+
+START-OF-SELECTION.
+  CASE 'X'.
+    WHEN pa_all.
+      SELECT * FROM dv_flights
+        INTO TABLE gt_flight
+        WHERE carrid IN so_car
+          AND connid IN so_con
+          AND fldate IN so_dat.
+    WHEN pa_nat.
+      SELECT * FROM dv_flights
+        INTO TABLE gt_flight
+        WHERE carrid IN so_car
+          AND connid IN so_con
+          AND fldate IN so_dat
+          AND countryto <> dv_flights~countryfr
+          AND countryfr = pa_con.
+    WHEN pa_int.
+      SELECT * FROM dv_flights
+        INTO TABLE gt_flight
+        WHERE carrid IN so_car
+          AND connid IN so_con
+          AND fldate IN so_dat
+          AND countryto = dv_flights~countryfr.
+    WHEN OTHERS.
+  ENDCASE.
+```
