Update 프로그래밍 전용 리포트 개발(12.23).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
@@ -753,3 +753,18 @@ START-OF-SELECTION.
     WHEN OTHERS.
   ENDCASE.
 ```
+- 결과 확인
+  
+<img width="596" height="194" alt="image" src="https://github.com/user-attachments/assets/9dfeae5f-6b89-4237-8d67-b663454e459c" />
+</br>
+
+<img width="307" height="189" alt="image" src="https://github.com/user-attachments/assets/c348cd17-17a0-46a5-b774-77e8924e9f9b" />
+</br>
+
+<img width="547" height="317" alt="image" src="https://github.com/user-attachments/assets/15e61821-6653-48c6-94f1-2a98c4387acd" />
+</br>
+
+- countyfr 입력 안하면 오류 ( message class )
+  
+<img width="140" height="35" alt="image" src="https://github.com/user-attachments/assets/3f16b039-3eef-4334-b13a-26857c62a9bc" />
+
