Update 프로그래밍 전용 리포트 개발(12.23).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
@@ -281,7 +281,11 @@ INITIALIZATION.
 </br>
 
 ### 6) Variant
+- Selection Screen 입력값을 저장해두고 재사용하는 실행 조건
+<img width="472" height="390" alt="image" src="https://github.com/user-attachments/assets/e64f958c-25d6-4824-b7b5-8d6f30db8eda" />
+</br>
 
+<img width="485" height="214" alt="image" src="https://github.com/user-attachments/assets/f9b18ff3-9c06-44f2-816b-00880e01fc90" />
 
 </br>
 </br>
