Update 프로그래밍 전용 리포트 개발(12.23).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
@@ -5,6 +5,8 @@
 - **2) Selection Screen - Selection Screen Block / Selection Screen Lines**
 - **3) AT SELECTION-SCREEN ON <field>**
 - **4) Selection Screen 서브스크린 & 탭스트립**
+- **5) Message Class**
+- **6) Variant**
 </br>
 
 </br>
@@ -490,7 +492,10 @@ ENDCASE.
 </br>
 
 ### 실습 1
-- Selection screen 예제
+- Selection screen
+- AT SELECTION-SCREEN ON <field>
+- Selection Screen 서브스크린 & 탭스트립
+- Message Class & Variant
 </br>
 
 - Program 코드에 `TOP` , `E01` 모듈 생성
@@ -515,7 +520,7 @@ SELECTION-SCREEN BEGIN OF BLOCK blk1 WITH FRAME TITLE TEXT-001.
   PARAMETERS: pa_rad1 RADIOBUTTON GROUP rad,
               pa_rad2 RADIOBUTTON GROUP rad DEFAULT 'X',
               pa_rad3 RADIOBUTTON GROUP rad.
-  SELECT-OPTIONS: so_car FOR gs_flight-carrid DEFAULT 'AA' TO 'LH',
+  SELECT-OPTIONS: so_car FOR gs_flight-carrid DEFAULT 'AA' TO 'LH' OPTION BT SIGN E,
                   so_con FOR gs_flight-connid DEFAULT '0017' NO-EXTENSION. " NO INTERVALS
 
 SELECTION-SCREEN END OF BLOCK blk1.
@@ -530,43 +535,87 @@ SELECTION-SCREEN BEGIN OF BLOCK blk2 WITH FRAME.
   SELECTION-SCREEN END OF LINE.
 
 SELECTION-SCREEN END OF BLOCK blk2.
+
+SELECTION-SCREEN BEGIN OF SCREEN 101 AS SUBSCREEN.
+  SELECT-OPTIONS: so_fdt FOR gs_flight-fldate.
+SELECTION-SCREEN END OF SCREEN 101.
+
+SELECTION-SCREEN BEGIN OF SCREEN 102 AS SUBSCREEN.
+  PARAMETERS: pa_chk1 AS CHECKBOX.
+SELECTION-SCREEN END OF SCREEN 102.
+
+SELECTION-SCREEN BEGIN OF SCREEN 103 AS SUBSCREEN.
+  PARAMETERS: pa_chk2 AS CHECKBOX.
+SELECTION-SCREEN END OF SCREEN 103.
+
+"TAB STRIP + Sub screen 추가
+SELECTION-SCREEN BEGIN OF TABBED BLOCK tab_strip FOR 5 LINES.
+  SELECTION-SCREEN TAB (20) TEXT-SB1
+    USER-COMMAND comm1 DEFAULT SCREEN 101.
+  SELECTION-SCREEN TAB (20) TEXT-SB2
+    USER-COMMAND comm2 DEFAULT SCREEN 102.
+  SELECTION-SCREEN TAB (20) TEXT-SB3
+    USER-COMMAND comm3 DEFAULT SCREEN 103.
+SELECTION-SCREEN END OF BLOCK tab_strip.
 ```
 - `E01` 모듈 생성
 ```abap
-*&---------------------------------------------------------------------*
-*& Include          ZPROGB03_0027_E01
-*&---------------------------------------------------------------------*
-
 INITIALIZATION.
-SO_CAR-sign = 'I'.
-SO_CAR-option = 'BT'.
-SO_CAR-LOW = 'AA'.
-SO_CAR-HIGH = 'AZ'.
-APPEND SO_CAR.
+  so_car-sign = 'I'.
+  so_car-option = 'BT'.
+  so_car-low = 'AA'.
+  so_car-high = 'AZ'.
+  APPEND so_car.
 
-CLEAR SO_CAR. " Header (Structure)만 클리어됨
-SO_CAR-sign = 'E'.
-SO_CAR-option = 'EQ'.
-SO_CAR-LOW = 'LH'.
-APPEND SO_CAR.
+  CLEAR so_car. " Header (Structure)만 클리어됨
+  so_car-sign = 'E'.
+  so_car-option = 'EQ'.
+  so_car-low = 'LH'.
+  APPEND so_car.
+
+  tab_strip-activetab ='COMM3'.
+  tab_strip-dynnr = '0103'. " 초기 스크린 설정
+
+*AT SELECTION-SCREEN ON pa_carr.
+*  IF pa_carr IS INITIAL.
+*    MESSAGE e003(zmcb03).
+*  ENDIF.
+
+AT SELECTION-SCREEN ON so_car.
+  IF so_car IS INITIAL.
+    MESSAGE e003(zmcb03).
+  ENDIF.
+
+AT SELECTION-SCREEN ON RADIOBUTTON GROUP rad.
+  IF pa_rad1 = 'X'.
+    MESSAGE e003(zmcb03).
+  ENDIF.
+
+AT SELECTION-SCREEN ON BLOCK blk1.
+  IF pa_rad3 = 'X' AND so_con IS NOT INITIAL.
+    MESSAGE e003(zmcb03).
+  ENDIF.
+
+AT SELECTION-SCREEN ON HELP-REQUEST FOR pa_carr.
+  CALL SCREEN 100 STARTING AT 5 5.
 
 START-OF-SELECTION.
 
-SELECT *
-  FROM dv_flights
-  INTO TABLE gt_flight
-  WHERE CARRID = 'AA'
-    AND CONNID = '0017'.
+  SELECT *
+    FROM dv_flights
+    INTO TABLE gt_flight
+    WHERE carrid = 'AA'
+      AND connid = '0017'.
 
-IF SY-SUBRC = 0.
-  LOOP AT gt_flight INTO gs_flight.
-    WRITE:/ gs_flight-carrid,
-            gs_flight-connid,
-            gs_flight-fldate,
-            gs_flight-cityfrom,
-            gs_flight-cityto.
-  ENDLOOP.
-ENDIF.
+  IF sy-subrc = 0.
+    LOOP AT gt_flight INTO gs_flight.
+      WRITE:/ gs_flight-carrid,
+              gs_flight-connid,
+              gs_flight-fldate,
+              gs_flight-cityfrom,
+              gs_flight-cityto.
+    ENDLOOP.
+  ENDIF.
 ```
 - 결과 확인
 <img width="454" height="248" alt="image" src="https://github.com/user-attachments/assets/30389e0a-7f6a-482b-a2c7-946649622acc" />
