Update 프로그래밍 전용 리포트 개발(12.23).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
@@ -7,7 +7,6 @@
 - **4) Selection Screen 서브스크린 & 탭스트립**
 - **5) Message Class**
 - **6) Variant**
-</br>
 
 </br>
 </br>
@@ -462,6 +461,32 @@ CASE gc_mark.
   WHEN pa_lim2.
   WHEN pa_lim3.
 ENDCASE.
+```
+</br>
+</br>
+
+### 4) SELECTION-SCREEN SKIP
+- Selection Screen에서 빈 줄(여백)을 추가해서 화면을 보기 좋게 만듦
+- <n> 생략 시 → 1줄, <n> 지정 시 → n줄
+```abap
+SELECTION-SCREEN SKIP [<n>].
+```
+```abap
+SELECTION-SCREEN SKIP 2.
+```
+</br>
+</br>
+
+### 5) CHECK 조건식
+- 조건이 참이면 계속 진행, 거짓이면 즉시 현재 처리 블록 종료
+```abap
+CHECK <조건식>.
+```
+```abap
+LOOP AT gt_data INTO gs_data.
+  CHECK gs_data-status = 'A'.        " status ≠ 'A' 인 데이터는 자동으로 건너뜀
+  WRITE: / gs_data-id.
+ENDLOOP.
 ```
 </br>
 </br>
