Update 프로그래밍 전용 리포트 개발(12.23).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
@@ -82,6 +82,8 @@ SELECT-OPTIONS so_car FOR sflight-carrid
   MODIF ID A1.                 "화면 제어용 그룹 ID
 ```
 
+- SIGN : `I` - 포함, `E` - 제외
+  
 | ABAP OPTION 값 | 의미 (Meaning) | LOW/HIGH 사용 | SQL 연산자 개념 |
 | :---: | :--- | :---: | :---: |
 | **`EQ`** | Equal (같음) | `LOW` 값만 사용 | `fieldName = LOW` |
