Update 프로그래밍 전용 리포트 개발(12.23).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
@@ -523,6 +523,7 @@ ENDLOOP.
 - AT SELECTION-SCREEN ON <field>
 - Selection Screen 서브스크린 & 탭스트립
 - Message Class & Variant
+- HELP-REQUEST 사용 (특정 필드에서 F1(Help) 를 눌렀을 때 실행되는 이벤트)
 </br>
 
 - Program 코드에 `TOP` , `E01` 모듈 생성
@@ -649,6 +650,9 @@ START-OF-SELECTION.
 </br>
 
 <img width="287" height="208" alt="image" src="https://github.com/user-attachments/assets/94fd9122-9436-43d6-8084-4d3dd75ac8fa" />
+</br>
+
+<img width="554" height="399" alt="image" src="https://github.com/user-attachments/assets/82ce792e-a40c-4b56-a105-32ed94815744" />
 
 </br>
 </br>
