Update 프로그래밍 전용 리포트 개발(12.24).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.24).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.24).md
@@ -20,3 +20,5 @@
 
 ### 실습 1
 - 문제
+  
+<img width="505" height="228" alt="image" src="https://github.com/user-attachments/assets/6c27632e-38c4-4deb-b138-4b457f150973" />
