Update 프로그래밍 전용 리포트 개발(12.24).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.24).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.24).md
@@ -22,3 +22,65 @@
 - 문제
   
 <img width="554" height="250" alt="image" src="https://github.com/user-attachments/assets/ca025a6b-eab5-4677-bdfb-d307ad114460" />
+</br>
+
+- `TOP` 모듈 생성
+```abap
+DATA: gs_flight TYPE dv_flights.
+
+PARAMETERS: pa_name TYPE c LENGTH 3.
+SELECT-OPTIONS: so_car FOR gs_flight-carrid,
+                so_con FOR gs_flight-connid.
+
+SELECTION-SCREEN SKIP 2.
+
+SELECTION-SCREEN BEGIN OF BLOCK blk1 WITH FRAME TITLE TEXT-001.
+  SELECTION-SCREEN SKIP 2.
+
+  SELECTION-SCREEN BEGIN OF LINE.
+    SELECTION-SCREEN COMMENT 1(15) TEXT-003.
+    SELECTION-SCREEN COMMENT 35(10) TEXT-004.
+    PARAMETERS: pa_abap AS CHECKBOX.
+    SELECTION-SCREEN COMMENT 60(10) TEXT-005.
+    PARAMETERS: pa_fiori AS CHECKBOX.
+  SELECTION-SCREEN END OF LINE.
+
+  SELECTION-SCREEN SKIP 2.
+  SELECTION-SCREEN BEGIN OF BLOCK blk2 WITH FRAME TITLE TEXT-002.
+    PARAMETERS: pa_all RADIOBUTTON GROUP rad,
+                pa_nat RADIOBUTTON GROUP rad,
+                pa_int RADIOBUTTON GROUP rad DEFAULT 'X'.
+  SELECTION-SCREEN END OF BLOCK blk2.
+SELECTION-SCREEN END OF BLOCK blk1.
+```
+</br>
+
+- `E01` 모듈 생성
+```abap
+INITIALIZATION.
+  so_car-sign = 'I'.
+  so_car-option = 'BT'.
+  so_car-low = 'AA'.
+  so_car-high = 'QF'.
+  APPEND so_car.
+
+  CLEAR so_car.
+  so_car-sign = 'E'.
+  so_car-option = 'EQ'.
+  so_car-low = 'LH'.
+  APPEND so_car.
+
+AT SELECTION-SCREEN ON RADIOBUTTON GROUP rad.
+  IF pa_all = 'X'.
+    MESSAGE 'ERROR !' TYPE 'E'.
+  ENDIF.
+```
+</br>
+
+- 결과 확인
+  
+<img width="554" height="262" alt="image" src="https://github.com/user-attachments/assets/250511f8-7d2d-4ce1-82a2-7ab4724209c0" />
+</br>
+
+- PA_ALL 선택하고 실행하면 에러 발생하며 라디오 버튼 그룹만 활성화
+<img width="546" height="424" alt="image" src="https://github.com/user-attachments/assets/041c32eb-eb29-4ba4-8681-fb6c6d8ed2b5" />
