Update 프로그래밍 전용 리포트 개발(12.23).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
@@ -761,29 +761,32 @@ START-OF-SELECTION.
 
 - `TOP` 모듈 수정
 ```abap
-DATA: gs_flight TYPE dv_flights,
-      gt_flight TYPE TABLE OF dv_flights.
+DATA: gs_flight TYPE dv_flights.
 
-SELECTION-SCREEN BEGIN OF SCREEN 1100 AS SUBSCREEN.
-  SELECT-OPTIONS: so_car FOR gs_flight-carrid MEMORY ID car,
-                  so_con FOR gs_flight-connid.
-SELECTION-SCREEN END OF SCREEN 1100.
+PARAMETERS: pa_name TYPE c LENGTH 3.
+SELECT-OPTIONS: so_car FOR gs_flight-carrid,
+                so_con FOR gs_flight-connid.
 
-SELECTION-SCREEN BEGIN OF SCREEN 1200 AS SUBSCREEN.
-  SELECT-OPTIONS: so_dat FOR gs_flight-fldate NO-EXTENSION.
-SELECTION-SCREEN END OF SCREEN 1200.
+SELECTION-SCREEN SKIP 2.
 
-SELECTION-SCREEN BEGIN OF SCREEN 1300 AS SUBSCREEN.
-  PARAMETERS: pa_all RADIOBUTTON GROUP rad,
-              pa_nat RADIOBUTTON GROUP rad,
-              pa_int RADIOBUTTON GROUP rad DEFAULT 'X'.
-SELECTION-SCREEN END OF SCREEN 1300.
+SELECTION-SCREEN BEGIN OF BLOCK blk1 WITH FRAME TITLE TEXT-001.
+  SELECTION-SCREEN SKIP 2.
 
-SELECTION-SCREEN BEGIN OF TABBED BLOCK tab_strip FOR 5 LINES.
-  SELECTION-SCREEN TAB (20) TEXT-TA1 USER-COMMAND comm1 DEFAULT SCREEN 1100.
-  SELECTION-SCREEN TAB (20) TEXT-TA2 USER-COMMAND comm2 DEFAULT SCREEN 1200.
-  SELECTION-SCREEN TAB (20) TEXT-TA3 USER-COMMAND comm3 DEFAULT SCREEN 1300.
-SELECTION-SCREEN END OF BLOCK tab_strip.
+  SELECTION-SCREEN BEGIN OF LINE.
+    SELECTION-SCREEN COMMENT 1(15) TEXT-003.
+    SELECTION-SCREEN COMMENT 35(10) TEXT-004 FOR FIELD pa_abap.
+    PARAMETERS: pa_abap AS CHECKBOX.
+    SELECTION-SCREEN COMMENT 60(10) TEXT-005 FOR FIELD pa_fiori.
+    PARAMETERS: pa_fiori AS CHECKBOX.
+  SELECTION-SCREEN END OF LINE.
+
+  SELECTION-SCREEN SKIP 2.
+  SELECTION-SCREEN BEGIN OF BLOCK blk2 WITH FRAME TITLE TEXT-002.
+    PARAMETERS: pa_all RADIOBUTTON GROUP rad,
+                pa_nat RADIOBUTTON GROUP rad,
+                pa_int RADIOBUTTON GROUP rad DEFAULT 'X'.
+  SELECTION-SCREEN END OF BLOCK blk2.
+SELECTION-SCREEN END OF BLOCK blk1.
 ```
 - `E01` 모듈 수정
 ```abap
