--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
@@ -1,12 +1,12 @@
 ## <  핵심 개념 >
 </br>
 
-- **1) **
-- **2) **
-- **3) **
-- **4) **
-- **5) **
-- **6) **
+- **1) ABAP 이벤트**
+- **2) Selection Screen - Selection Screen Block / Selection Screen Lines**
+- **3) AT SELECTION-SCREEN ON <field>**
+- **4) Selection Screen 서브스크린 & 탭스트립**
+- **5) Message Class**
+- **6) Variant**
 
 </br>
 </br>
