Update 프로그래밍 전용 리포트 개발(12.24).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.24).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.24).md
@@ -15,6 +15,56 @@
 
 </br>
 
+## < Selection Screen >
+</br>
+
+### 1) Pushbutton
+- Selection Screen 에 버튼을 하나 추가
+- 버튼 클릭 시 USER-COMMAND(OKCODE) 발생
+```abap
+TABLES <screen_fields>.
+
+SELECTION-SCREEN
+  PUSHBUTTON <position>(<length>) <text_var>
+  USER-COMMAND <okcode>.
+```
+```abap
+AT SELECTION-SCREEN.
+
+  CASE <screen_fields>-ucomm.
+    WHEN '<okcode>'.
+      " 버튼 클릭 시 처리 로직
+    WHEN OTHERS.
+  ENDCASE.
+```
+- 예시 코드
+```abap
+TABLES gv_scr.
+
+DATA gv_btn_text TYPE string.
+
+PARAMETERS p_carr TYPE scarr-carrid.
+
+SELECTION-SCREEN
+  PUSHBUTTON /10(20) gv_btn_text USER-COMMAND btn.    " / 은 줄 바꿈
+
+INITIALIZATION.
+  gv_btn_text = 'Display details'.
+
+AT SELECTION-SCREEN.
+  CASE gv_scr-ucomm.
+    WHEN 'BTN'.
+      MESSAGE 'Pushbutton 클릭됨' TYPE 'I'.
+  ENDCASE.
+```
+
+</br>
+</br>
+
+---
+
+</br>
+
 ## < 실습 코드 >
 </br>
 
