Update 프로그래밍 전용 리포트 개발(12.24).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.24).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.24).md
@@ -61,6 +61,21 @@ AT SELECTION-SCREEN.
 </br>
 </br>
 
+## 2) Selection Screen 필드 제어
+- Selection Screen에서 필드의 표시/입력 여부를 화면 출력 직전에 제어
+```abap
+AT SELECTION-SCREEN OUTPUT.
+
+  LOOP AT SCREEN.
+    IF <조건>.
+      screen-<속성> = <값>.
+      MODIFY SCREEN.
+    ENDIF.
+  ENDLOOP.
+```
+</br>
+</br>
+
 ---
 
 </br>
