Update 프로그래밍 전용 리포트 개발(12.24).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.24).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.24).md
@@ -63,12 +63,30 @@ AT SELECTION-SCREEN.
 
 ## 2) Selection Screen 필드 제어
 - Selection Screen에서 필드의 표시/입력 여부를 화면 출력 직전에 제어
+- **`CS`** = 왼쪽 문자열에 오른쪽 문자열이 포함되어 있으면 참
 ```abap
 AT SELECTION-SCREEN OUTPUT.
 
   LOOP AT SCREEN.
     IF <조건>.
       screen-<속성> = <값>.
+      MODIFY SCREEN.
+    ENDIF.
+  ENDLOOP.
+```
+```abap
+DATA: gs_booking TYPE sbook.
+
+SELECT-OPTIONS:
+  so_car FOR gs_booking-carrid,
+  so_con FOR gs_booking-connid MODIF ID abc.
+
+AT SELECTION-SCREEN OUTPUT.
+
+  LOOP AT SCREEN.
+    IF screen-name CS 'SO_CON'
+       OR screen-group1 = 'ABC'.
+      screen-active = 0.
       MODIFY SCREEN.
     ENDIF.
   ENDLOOP.
