Update 프로그래밍 전용 리포트 개발(12.24).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.24).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.24).md
@@ -39,7 +39,7 @@ AT SELECTION-SCREEN.
 ```
 - 예시 코드
 ```abap
-TABLES gv_scr.
+TABLES SSCRFIELDS.
 
 DATA gv_btn_text TYPE string.
 
@@ -52,7 +52,7 @@ INITIALIZATION.
   gv_btn_text = 'Display details'.
 
 AT SELECTION-SCREEN.
-  CASE gv_scr-ucomm.
+  CASE SSCRFIELDS-ucomm.
     WHEN 'BTN'.
       MESSAGE 'Pushbutton 클릭됨' TYPE 'I'.
   ENDCASE.
