Update 프로그래밍 전용 리포트 개발(12.24).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.24).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.24).md
@@ -74,6 +74,13 @@ AT SELECTION-SCREEN OUTPUT.
     ENDIF.
   ENDLOOP.
 ```
+- `screen-active` → 0이면 필드 완전 숨김, 1이면 표시
+- `screen-invisible` → 1이면 값이 *****로 마스킹되어 보임
+- `screen-input` → 0이면 입력 불가(읽기 전용), 1이면 입력 가능
+- `screen-output` → 0이면 출력 안 함, 1이면 출력
+- `screen-required` → 1이면 필수 입력 표시
+- `screen-intensified` → 1이면 필드 강조 표시
+- `screen-display_3d` → 1이면 3D 스타일, 0이면 Flat 스타일
 ```abap
 DATA: gs_booking TYPE sbook.
 
