Update 프로그래밍 전용 리포트 개발(12.24).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.24).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.24).md
@@ -29,12 +29,13 @@ SELECTION-SCREEN
   USER-COMMAND <okcode>.
 ```
 ```abap
-AT SELECTION-SCREEN.
+INITIALIZATION.
+  <text_var> = '<버튼 텍스트>'.
 
+AT SELECTION-SCREEN.
   CASE <screen_fields>-ucomm.
     WHEN '<okcode>'.
       " 버튼 클릭 시 처리 로직
-    WHEN OTHERS.
   ENDCASE.
 ```
 - 예시 코드
