Update 프로그래밍 전용 리포트 개발(12.24).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.24).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.24).md
@@ -180,3 +180,83 @@ AT SELECTION-SCREEN ON RADIOBUTTON GROUP rad.
 
 - PA_ALL 선택하고 실행하면 에러 발생하며 라디오 버튼 그룹만 활성화
 <img width="546" height="424" alt="image" src="https://github.com/user-attachments/assets/041c32eb-eb29-4ba4-8681-fb6c6d8ed2b5" />
+</br>
+</br>
+</br>
+</br>
+
+### 실습 2
+- `Pushbutton` 을 이용한 `Selection Screen` 필드 제어 실습
+- 전 실습에서 이어서 진행
+</br>
+
+- `TOP` 모듈 생성
+```abap
+TABLES SSCRFIELDS.
+
+DATA: gs_flight TYPE dv_flights,
+      gt_flight TYPE TABLE OF dv_flights,
+      gv_mode TYPE I VALUE 1.
+
+SELECTION-SCREEN BEGIN OF SCREEN 1100 AS SUBSCREEN.
+  SELECT-OPTIONS: so_car FOR gs_flight-carrid MEMORY ID car,
+                  so_con FOR gs_flight-connid.
+  SELECTION-SCREEN SKIP 2.
+  SELECTION-SCREEN PUSHBUTTON 1(10) gv_text USER-COMMAND hide.
+  SELECTION-SCREEN SKIP 1.
+  SELECTION-SCREEN BEGIN OF BLOCK blk1 WITH FRAME TITLE TEXT-001.
+    SELECT-OPTIONS: so_cif FOR gs_flight-cityfrom MODIF ID grp,
+                    so_cit FOR gs_flight-cityto MODIF ID grp.
+  SELECTION-SCREEN END OF BLOCK blk1.
+SELECTION-SCREEN END OF SCREEN 1100.
+```
+</br>
+
+- `E01` 모듈 생성
+```abap
+INITIALIZATION.
+  so_car-sign = 'I'.
+  so_car-option = 'BT'.
+  so_car-low = 'AA'.
+  so_car-high = 'QZ'.
+  APPEND so_car.
+
+  CLEAR so_car.
+  so_car-sign = 'E'.
+  so_car-option = 'EQ'.
+  so_car-low = 'AZ'.
+  APPEND so_car.
+
+  tab_strip-activetab = 'COMM2'.
+  tab_strip-dynnr = '1200'.
+
+  gv_text = '숨김모드 적용'.
+
+AT SELECTION-SCREEN OUTPUT.
+*  CHECK sy-dynnr = 1100.  " IF sy-dynnr = 1100. 도 가능
+  LOOP AT SCREEN.
+    IF screen-group1 = 'GRP'.
+      screen-active = gv_mode.
+      MODIFY SCREEN.
+    ENDIF.
+  ENDLOOP.
+
+AT SELECTION-SCREEN.
+  CHECK sy-dynnr = 1100.  " 1100번일때만 로직 실행
+  CASE SSCRFIELDS-ucomm.
+    WHEN 'HIDE'.
+      IF gv_mode = 1.
+        gv_mode = 0.
+        gv_text = '숨김모드 해제'.
+      ELSE.
+        gv_mode = 1.
+        gv_text = '숨김모드 적용'.
+      ENDIF.
+    WHEN OTHERS.
+  ENDCASE.
+```
+</br>
+
+- 결과 확인
+<img width="578" height="221" alt="image" src="https://github.com/user-attachments/assets/72062d90-598c-41b5-b648-f9e50eb3c5c1" />
+</br>
