Update 프로그래밍 전용 리포트 개발(12.24).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.24).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.24).md
@@ -7,7 +7,9 @@
 - **4) Selection Screen 서브스크린 & 탭스트립**
 - **5) Message Class**
 - **6) Variant**
+</br>
 
+- 그룹명 같은 **이름** 지정 시 무조건 **대문자**
 </br>
 </br>
 
