Update 프로그래밍 전용 리포트 개발(12.24).md'

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.24).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.24).md
@@ -192,7 +192,7 @@ AT SELECTION-SCREEN ON RADIOBUTTON GROUP rad.
 - 전 실습에서 이어서 진행
 </br>
 
-- `TOP` 모듈 생성
+- `TOP` 모듈 수정
 ```abap
 TABLES SSCRFIELDS.
 
@@ -214,7 +214,7 @@ SELECTION-SCREEN END OF SCREEN 1100.
 ```
 </br>
 
-- `E01` 모듈 생성
+- `E01` 모듈 수정
 ```abap
 INITIALIZATION.
   so_car-sign = 'I'.
