Update 프로그래밍 전용 리포트 개발(12.24).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.24).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.24).md
@@ -1,12 +1,8 @@
 ## <  핵심 개념 >
 </br>
 
-- **1) ABAP 이벤트**
-- **2) Selection Screen - Selection Screen Block / Selection Screen Lines**
-- **3) AT SELECTION-SCREEN ON <field>**
-- **4) Selection Screen 서브스크린 & 탭스트립**
-- **5) Message Class**
-- **6) Variant**
+- **1) Pushbutton**
+- **2) Selection Screen 필드 제어**
 </br>
 
 - 그룹명 같은 **이름** 지정 시 무조건 **대문자**
@@ -64,7 +60,7 @@ AT SELECTION-SCREEN.
 </br>
 </br>
 
-## 2) Selection Screen 필드 제어
+### 2) Selection Screen 필드 제어
 - Selection Screen에서 필드의 표시/입력 여부를 화면 출력 직전에 제어
 - **`CS`** = 왼쪽 문자열에 오른쪽 문자열이 포함되어 있으면 참
 ```abap
