--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.24).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.24).md
@@ -62,7 +62,7 @@ AT SELECTION-SCREEN.
 
 ### 2) Selection Screen 필드 제어
 - Selection Screen에서 필드의 표시/입력 여부를 화면 출력 직전에 제어
-- **`CS`** = 왼쪽 문자열에 오른쪽 문자열이 포함되어 있으면 참
+- **CS (Contain String)** : 왼쪽 문자열 안에 오른쪽 문자열이 포함되면 TRUE
 ```abap
 AT SELECTION-SCREEN OUTPUT.
 
