Update 프로그래밍 전용 리포트 개발(12.24).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.24).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.24).md
@@ -189,13 +189,22 @@ AT SELECTION-SCREEN ON RADIOBUTTON GROUP rad.
 </br>
 
 **1) 프로그램 최초 실행**
-- `INITIALIZATION` 실행 → `AT SELECTION-SCREEN OUTPUT(PBO, 1000)` → `AT SELECTION-SCREEN OUTPUT(PBO, 1200)` → 화면 표시
+- `INITIALIZATION` 실행
+  → `AT SELECTION-SCREEN OUTPUT(PBO, 1000)`
+  → `AT SELECTION-SCREEN OUTPUT(PBO, 1200)`
+  → 화면 표시
   
 **2) 탭을 1100번으로 이동**
-- `AT SELECTION-SCREEN OUTPUT(PAI, 1200)` → `AT SELECTION-SCREEN OUTPUT(PAI, 1000)` → `AT SELECTION-SCREEN OUTPUT(PBO, 1000)` → `AT SELECTION-SCREEN(PBO, 1100)` → 1100 화면 출력
+- `AT SELECTION-SCREEN OUTPUT(PAI, 1200)`
+  → `AT SELECTION-SCREEN OUTPUT(PAI, 1000)`
+  → `AT SELECTION-SCREEN OUTPUT(PBO, 1000)`
+  → `AT SELECTION-SCREEN(PBO, 1100)`
+  → 1100 화면 출력
   
 **3) 1100 화면에서 HIDE 버튼 클릭**
-- 버튼 클릭 → `AT SELECTION-SCREEN(PAI, 1100)` → `AT SELECTION-SCREEN OUTPUT(PAI, 1000)`
+- 버튼 클릭
+  → `AT SELECTION-SCREEN(PAI, 1100)`
+  → `AT SELECTION-SCREEN OUTPUT(PAI, 1000)`
 </br>
 
 - `TOP` 모듈 수정
