Update 프로그래밍 전용 리포트 개발(12.24).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.24).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.24).md
@@ -183,9 +183,16 @@ AT SELECTION-SCREEN ON RADIOBUTTON GROUP rad.
 </br>
 </br>
 
+### 실습 2
+- 전 실습에서 program 27에 이어서 진행
+</br>
+</br>
+</br>
+</br>
+
 ### 실습 3
 - `Pushbutton` 을 이용한 `Selection Screen` 필드 제어 실습
-- 전 실습에서 이어서 진행
+- 전 실습(exercise)에서 이어서 진행
 </br>
 </br>
 
