Update 프로그래밍 전용 리포트 개발(12.23).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.23).md
@@ -519,6 +519,7 @@ ENDLOOP.
 </br>
 
 ### 실습 1
+- program 27에서 진행
 - Selection screen
 - AT SELECTION-SCREEN ON <field>
 - Selection Screen 서브스크린 & 탭스트립
