Update 프로그래밍 전용 리포트 개발(12.24).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.24).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.24).md
@@ -185,6 +185,77 @@ AT SELECTION-SCREEN ON RADIOBUTTON GROUP rad.
 
 ### 실습 2
 - 전 실습에서 program 27에 이어서 진행
+- Selection Screen 필드 제어
+- ALV 실습 활용
+</br>
+
+- `TOP` 모듈 생성
+```abap
+TABLES sscrfields.
+
+DATA: gs_flight TYPE dv_flights,
+      gt_flight TYPE TABLE OF dv_flights,
+      gv_mode TYPE C VALUE '1'.
+
+" 2025-12-24: SALV 관련 변수 선언
+DATA: go_salv TYPE REF TO cl_salv_table.
+
+SELECTION-SCREEN BEGIN OF BLOCK blk1 WITH FRAME TITLE TEXT-001.
+  SELECTION-SCREEN SKIP 2.
+  "버튼 추가. 버튼명:gv_text, 버튼코드: ON
+  SELECTION-SCREEN PUSHBUTTON pos_low(20) gv_text USER-COMMAND ON.
+
+  PARAMETERS: pa_rad1 RADIOBUTTON GROUP rad,
+              pa_rad2 RADIOBUTTON GROUP rad DEFAULT 'X',
+              pa_rad3 RADIOBUTTON GROUP rad.
+  SELECT-OPTIONS: so_car FOR gs_flight-carrid DEFAULT 'AA' TO 'LH' OPTION BT SIGN E,
+                  so_con FOR gs_flight-connid DEFAULT '0017' NO-EXTENSION. " NO INTERVALS
+
+SELECTION-SCREEN END OF BLOCK blk1.
+```
+</br>
+
+- `E01` 모듈 생성
+```abap
+INITIALIZATION.
+  tab_strip-activetab ='COMM3'.
+  tab_strip-dynnr = '0103'. " 초기 스크린 설정
+
+  gv_text = '잠금 적용'.
+
+AT SELECTION-SCREEN OUTPUT. " PBO
+  LOOP AT SCREEN.
+    IF screen-name CS 'RAD3'.
+      screen-input = gv_mode.
+    ENDIF.
+    MODIFY SCREEN.
+  ENDLOOP.
+
+AT SELECTION-SCREEN. " PAI
+  CHECK sy-dynnr = 1000.
+  CASE sscrfields-ucomm.
+    WHEN 'ON'.
+      IF gv_mode = '1'.
+        gv_mode = '0'.
+        gv_text = '잠금해제'.
+      ELSE.
+        gv_mode = '1'.
+        gv_text = '잠금 적용'.
+      ENDIF.
+    WHEN OTHERS.
+  ENDCASE.
+```
+</br>
+
+- ALV 적용 방식
+- `Pattern` 클릭 후'ABAP Objects Patterns' 더블클릭
+<img width="579" height="307" alt="image" src="https://github.com/user-attachments/assets/1f21c1ac-9374-4ca0-9ae2-f645d5ea9a68" />
+</br>
+</br>
+
+<img width="351" height="333" alt="image" src="https://github.com/user-attachments/assets/101a0700-8bac-448b-ae9b-632edf5a6447" />
+
+
 </br>
 </br>
 </br>
