Update 프로그래밍 전용 리포트 개발(12.24).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.24).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.24).md
@@ -254,7 +254,18 @@ AT SELECTION-SCREEN. " PAI
 </br>
 
 <img width="351" height="333" alt="image" src="https://github.com/user-attachments/assets/101a0700-8bac-448b-ae9b-632edf5a6447" />
+</br>
+</br>
+</br>
 
+- 결과 확인
+
+<img width="543" height="292" alt="image" src="https://github.com/user-attachments/assets/a1325d18-9403-4923-9f58-8691794b55e1" />
+</br>
+</br>
+
+- 버튼 누르면 잠금
+<img width="548" height="298" alt="image" src="https://github.com/user-attachments/assets/95dc1dfe-6b7e-4887-9985-226981e7421e" />
 
 </br>
 </br>
