Update 프로그래밍 전용 리포트 개발(12.24).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.24).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.24).md
@@ -266,6 +266,11 @@ AT SELECTION-SCREEN. " PAI
 
 - 버튼 누르면 잠금
 <img width="548" height="298" alt="image" src="https://github.com/user-attachments/assets/95dc1dfe-6b7e-4887-9985-226981e7421e" />
+</br>
+</br>
+
+- ALV 이용하여 출력
+<img width="543" height="176" alt="image" src="https://github.com/user-attachments/assets/571dc55b-d20f-4b93-9d2c-378d8d026ebd" />
 
 </br>
 </br>
