Update 프로그래밍 전용 리포트 개발(12.24).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.24).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.24).md
@@ -378,3 +378,88 @@ AT SELECTION-SCREEN.
 
 - 버튼 클릭하면 입력창이 숨겨짐
 <img width="579" height="222" alt="image" src="https://github.com/user-attachments/assets/0045c78e-b46c-439c-8095-df18e8af3f99" />
+</br>
+</br>
+</br>
+</br>
+
+### 실습 3 (과제)
+- 문제
+<img width="501" height="553" alt="image" src="https://github.com/user-attachments/assets/35361289-6707-4c88-a1fd-94288881aefd" />
+</br>
+</br>
+</br>
+</br>
+
+- `TOP` 모듈 생성
+```abap
+DATA: gs_scarr TYPE scarr,
+      gt_scarr TYPE TABLE OF scarr.
+
+DATA: BEGIN OF gs_data,
+        carrid    TYPE s_carr_id,     "DV_FLIGHTS
+        carrname  TYPE s_carrname,    "SCARR
+        connid    TYPE s_conn_id,     "DV_FLIGHTS
+        fldate    TYPE s_date,        "DV_FLIGHTS
+        cityfrom  TYPE s_from_cit,    "DV_FLIGHTS
+        cityto    TYPE s_to_city,     "DV_FLIGHTS
+        countryfr TYPE land1,         "DV_FLIGHTS
+        countryto TYPE land1,         "DV_FLIGHTS
+      END OF gs_data.
+DATA: gt_data LIKE TABLE OF gs_data.
+
+SELECT-OPTIONS: SO_CAR FOR gs_data-carrid,
+                SO_CON FOR gs_data-connid,
+                SO_FDT FOR gs_data-fldate NO INTERVALS.
+
+DATA: go_salv TYPE REF TO cl_salv_table.
+```
+</br>
+
+- `E01` 모듈 수정
+```abap
+INITIALIZATION.
+  SO_car-sign = 'I'.
+  so_car-option = 'BT'.
+  so_car-low = 'AA'.
+  so_car-high = 'QF'.
+  APPEND so_car.
+
+START-OF-SELECTION.
+  SELECT * FROM dv_flights
+    INTO CORRESPONDING FIELDS OF TABLE gt_data
+    WHERE carrid IN SO_car
+      AND connid IN SO_con
+      AND fldate IN SO_fdt.
+
+  " scarr에서 dv_flights의 carrid 에 맞는 데이터 뽑기
+  SELECT DISTINCT carrid carrname FROM scarr
+    INTO TABLE gt_scarr
+    FOR ALL ENTRIES IN gt_data
+    WHERE carrid = gt_data-carrid.
+
+  LOOP AT gt_data INTO gs_data.
+    READ TABLE gt_scarr INTO gs_scarr WITH KEY carrid = gs_data-carrid.
+    gs_data-carrname = gs_scarr-carrname.
+    MODIFY gt_data FROM gs_data.
+  ENDLOOP.
+
+  SORT gt_data BY carrid connid fldate ASCENDING.
+
+  TRY.
+      CALL METHOD cl_salv_table=>factory
+        IMPORTING
+          r_salv_table = go_salv
+        CHANGING
+          t_table      = gt_data.
+    CATCH cx_salv_msg.
+      MESSAGE 'Error !' TYPE 'E'.
+  ENDTRY.
+
+  go_salv->get_functions( )->set_all( abap_true ).
+  go_salv->display( ).
+```
+</br>
+
+- 결과 확인
+<img width="460" height="407" alt="image" src="https://github.com/user-attachments/assets/d34e516b-a7ed-4f27-9a7f-78410d3f9406" />
