Update 프로그래밍 전용 리포트 개발(12.24).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.24).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.24).md
@@ -19,6 +19,7 @@
 ### 1) Pushbutton
 - Selection Screen 에 버튼을 하나 추가
 - 버튼 클릭 시 USER-COMMAND(OKCODE) 발생
+- 버튼 생성 안되면 `/` 또는 `SKIP` 으로 띄우고 생성하기
 ```abap
 TABLES <screen_fields>.
 
