Update 프로그래밍 전용 리포트 개발(12.24).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.24).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.24).md
@@ -384,8 +384,12 @@ AT SELECTION-SCREEN.
 </br>
 </br>
 
-### 실습 3 (과제)
+### 실습 4 (과제)
 - 문제
+- `FOR ALL ENTRIES IN <itab>` 사용
+- `LOOP AT <itab> … ENDLOOP` 사용
+- `READ TABLE <itab> INTO .. WITH KEY …` 사용
+- `SORT <itab>` 사용
 <img width="501" height="553" alt="image" src="https://github.com/user-attachments/assets/35361289-6707-4c88-a1fd-94288881aefd" />
 </br>
 </br>
@@ -419,6 +423,7 @@ DATA: go_salv TYPE REF TO cl_salv_table.
 
 - `E01` 모듈 수정
 ```abap
+
 INITIALIZATION.
   SO_car-sign = 'I'.
   so_car-option = 'BT'.
@@ -433,11 +438,16 @@ START-OF-SELECTION.
       AND connid IN SO_con
       AND fldate IN SO_fdt.
 
+  MOVE-CORRESPONDING gt_data TO gt_copy_data.
+
+  SORT gt_copy_data BY carrid.
+  DELETE ADJACENT DUPLICATES FROM gt_copy_data COMPARING carrid.
+
   " scarr에서 dv_flights의 carrid 에 맞는 데이터 뽑기
-  SELECT DISTINCT carrid carrname FROM scarr
+  SELECT carrid carrname FROM scarr
     INTO TABLE gt_scarr
-    FOR ALL ENTRIES IN gt_data
-    WHERE carrid = gt_data-carrid.
+    FOR ALL ENTRIES IN gt_copy_data
+    WHERE carrid = gt_copy_data-carrid.
 
   LOOP AT gt_data INTO gs_data.
     READ TABLE gt_scarr INTO gs_scarr WITH KEY carrid = gs_data-carrid.
