Update 프로그래밍 전용 리포트 개발(12.26).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
@@ -11,5 +11,10 @@
 
 </br>
 
-## < Selection Screen >
+## < ALV 화면 구성 >
 </br>
+
+- List Header (선택) : ALV 제목/설명
+- Application Toolbar : 정렬·필터·엑셀 버튼 (클릭 시 이벤트 발생)
+
+<img width="569" height="401" alt="image" src="https://github.com/user-attachments/assets/fd47787f-152a-4951-ace0-df5b292b58cf" />
