Update 프로그래밍 전용 리포트 개발(12.26).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
@@ -14,7 +14,8 @@
 ## < ALV 화면 구성 >
 </br>
 
-- List Header (선택) : ALV 제목/설명
-- Application Toolbar : 정렬·필터·엑셀 버튼 (클릭 시 이벤트 발생)
+- **상단 영역**
+- `List Header` (선택) : ALV 제목/설명
+- `Application Toolbar` : 정렬·필터·엑셀 버튼 (클릭 시 이벤트 발생)
 
 <img width="490" height="346" alt="image" src="https://github.com/user-attachments/assets/5a287e4b-e177-4673-99a7-acdc4164259f" />
