Update 프로그래밍 전용 리포트 개발(12.26).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
@@ -14,6 +14,11 @@
 ## < ALV 화면 구성 >
 </br>
 
+- **ALV 기본 툴바 버튼 기능 설명**
+<img width="491" height="373" alt="image" src="https://github.com/user-attachments/assets/56eb0c96-3954-4912-b26c-2fb858e72333" />
+</br>
+</br>
+
 - **상단 영역**
 - `List Header` (선택) : ALV 제목/설명
 - `Application Toolbar` : 정렬·필터·엑셀 버튼 (클릭 시 이벤트 발생)
@@ -29,3 +34,9 @@
 - `Data` : 실제 조회 데이터
 
 <img width="495" height="393" alt="image" src="https://github.com/user-attachments/assets/c069f6ba-2f59-4113-a372-eaa7a211bf23" />
+</br>
+</br>
+
+- 하단
+- `Total Column` : 합계 대상 컬럼
+- `Aggregation Row` : 합계 / 평균 / 최소 / 최대
