Update 프로그래밍 전용 리포트 개발(12.26).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
@@ -46,3 +46,10 @@
 </br>
 </br>
 
+### ALV 마우스 사용
+- **행 선택** : 클릭 (Ctrl = 다중)
+- **컬럼 선택** : 헤더 클릭 (Ctrl = 다중)
+- **컬럼 이동** : 드래그
+- **폭 조절** : 컬럼 경계 드래그
+- **헤더 우클릭** : 복사 / 숨김 / 자동폭 / 고정
+
