Update 프로그래밍 전용 리포트 개발(12.26).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.26).md
@@ -52,4 +52,11 @@
 - **컬럼 이동** : 드래그
 - **폭 조절** : 컬럼 경계 드래그
 - **헤더 우클릭** : 복사 / 숨김 / 자동폭 / 고정
+</br>
+</br>
 
+### < ALV Subtotals >
+- `Total` : 전체 데이터 합계 → 맨 아래 1줄
+- `Subtotal` : 기준 컬럼별 그룹 합계 → 그룹마다 표시
+
+<img width="465" height="361" alt="image" src="https://github.com/user-attachments/assets/5be7e416-eda5-42ea-a17d-f8bf3a0f0a0d" />
